Bug 799165 - Don't revoke a view manager flush on PresShell destruction if we don't own the refresh driver. r=roc a=bajaj